--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -76,10 +76,10 @@
       
   }
 
-  #app {
+  /* #app {
     max-width: 1440px;
     margin: 0 auto;
-  }
+  } */
 
   html {
     @apply h-full;
